force-app/main/default/objects/Batch_Payment__c/Batch_Payment__c.object-meta.xml
<CustomObject>
    <label>Batch Payment</label>
    <nameField>
        <displayFormat>BP-{0000}</displayFormat>
        <label>Batch Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>