force-app/main/default/objects/Batch_Payment__c/fields/Check_or_Payment_Number__c.field-meta.xml
<CustomField>
    <fullName>Check_or_Payment_Number__c</fullName>
    <label>Check or Payment Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>