force-app/main/default/objects/Batch_Payment__c/fields/Paid_By_Field__c.field-meta.xml
<CustomField>
    <fullName>Paid_By_Field__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Paid By Field</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Batch Payments</relationshipLabel>
    <relationshipName>Batch_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>