force-app/main/default/objects/Batch_Payment__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Period</label>
    <referenceTo>Periods__c</referenceTo>
    <relationshipLabel>Batch Payments</relationshipLabel>
    <relationshipName>Batch_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>