force-app/main/default/objects/Batch_Payment__c/fields/Quickbooks_Payment_ID__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_Payment_ID__c</fullName>
    <externalId>true</externalId>
    <label>Quickbooks Payment ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>