force-app/main/default/objects/Batch_Payment__c/fields/Quickbooks_Sync_Error__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_Sync_Error__c</fullName>
    <label>Quickbooks Sync Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>