force-app/main/default/objects/Batch_Payment__c/fields/Total_Amount_Selected__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Selected__c</fullName>
    <label>Total Amount Selected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>