force-app/main/default/objects/Batch_Payment__c/fields/Total_Invoices_Selected__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoices_Selected__c</fullName>
    <label>Total Invoices Selected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>