force-app/main/default/objects/Batch_Payment__c/fields/Trust_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Trust_Portfolio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trust Portfolio</label>
    <referenceTo>Trust_Portfolio__c</referenceTo>
    <relationshipLabel>Batch Payments</relationshipLabel>
    <relationshipName>Batch_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>