force-app/main/default/objects/Batch_Payment__c/fields/Variance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Variance_Amount__c</fullName>
    <label>Variance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>